# oxidrive

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  create-tag.sh
.github/workflows/: ci.yml  release.yml
docs/architecture/: decision-tree.md  multi-user.md  overview.md
docs/conventions/: code-style.md  faq.md  git-workflow.md  google-credentials.md  troubleshooting.md
docs/plans/: phase0-scaffold.md  phase1-sync.md  phase2-watcher.md  phase3-workspace.md  phase4-index.md  phase5-polish.md  roadmap.md
src/: auth.rs  cli.rs  config.rs  daemon.rs  error.rs  lib.rs  logging.rs  main.rs  service.rs  types.rs
src/drive/: changes.rs  client.rs  download.rs  folders.rs  list.rs  locks.rs  mod.rs  types.rs  upload.rs
src/index/: csv_extract.rs  docx.rs  generator.rs  mod.rs  pdf.rs  pptx.rs  xlsx.rs
src/store/: db.rs  mod.rs  session.rs
src/sync/: coordination.rs  decision.rs  engine.rs  executor.rs  mod.rs  observability.rs  scan.rs
src/utils/: fs.rs  hash.rs  mod.rs  retry.rs
src/watch/: local.rs  mod.rs
tests/: conversion_integration.rs  multi_client.rs  sync_integration.rs
