[package]
name = "oxidrive"
version = "0.2.0"
edition = "2021"
description = "Bidirectional Google Drive sync tool with Google Workspace conversion and Markdown indexing"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1"
clap = { version = "4", features = ["derive"] }
notify = "7"
notify-debouncer-full = "0.4"
redb = "2"
zip = "2"
quick-xml = "0.37"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["ansi", "json", "env-filter"] }
oauth2 = "5"
thiserror = "2"
md-5 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
indicatif = "0.17"
csv = "1"
pdf-extract = "0.10"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
assert_matches = "1.5"
tokio-test = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
